--- a/Medical_Risks_UHCL_Agile.csproj
+++ b/Medical_Risks_UHCL_Agile.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Medical_Risks_UHCL_Agile</RootNamespace>
     <Nullable>enable</Nullable>
